<resources>
    <string name="app_name">DiaryProject</string>
    <string name="facebook_app_id">780537582455549</string>
    <string name="fb_login_protocol_scheme">fb780537582455549</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string> <!-- 페이스북-->
    <string name="long_text">I stand on this rostrum with a sense of deep humility and great pride-humility in the wake of those great American architects of our history who have stood here vefore me, pride in the reflection that this forum of legislative debate represents human liberty in the pureest form yet devised.
        Here are centered the hopes and aspirations and faith of the entire human race.
        The world has turned over many times since I took the oath on the plain at West Point, and the hopes and dreams have long since vanished, but I still remember the refrain of one of the most popular barrack ballads of that day which proclaimed most proudly that old solders never die; they just fade away.
        And like the old soldier of that ballad, I now close my military career and just fade away, and old soldier who tried to do his duty as God gave him the light to see that duty. Good-bye.</string>
    <string name="title_activity_post_upload">PostUploadActivity</string>
    <string name="title_activity_profile_modify">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
